--- a/project-code-challenge-Anders.ipynb
+++ b/project-code-challenge-Anders.ipynb
@@ -177,15 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a2b1c5a3\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'a2b1c5a3'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -210,7 +213,7 @@
     "        result = string\n",
     "    return result\n",
     "\n",
-    "    "
+    "string_compress(\"aabcccccaaa\")"
    ]
   },
   {
